atualizando o primeiro bloco

--- a/home.html
+++ b/home.html
@@ -13,7 +13,8 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="lib/css/elementTransitions.css">
+		<link rel="stylesheet" href="css/reset.css">
+    	<link rel="stylesheet" href="lib/css/elementTransitions.css">
 		<link rel="stylesheet" href="css/style.css">
 
 		<!-- G+ -->
@@ -39,7 +40,7 @@
     <div class="stamp"><a href="#/0">#rfcbr</a></div>
     <div class="slides et-wrapper">
       <!-- 1 -->
-      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+      <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
         <h1 class="presentation-frame">
           retrato<br>
           financiamento<br>
@@ -54,7 +55,7 @@
       </section>
 
       <!-- 2 -->
-      <section class="et-page" style= "background-color: red">
+      <section class="et-page" style="background-color: red">
         <p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
         <p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
         <p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
@@ -66,7 +67,7 @@
       </section>
 
       <!-- 3 -->
-      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+      <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
         <h2 class="dark-h2">O que queremos?</h2>
         <div class="we-want">
           <h3>Conhecer</h3>
@@ -87,7 +88,7 @@
       </section>
 
       <!-- 4 -->
-      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+      <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
         <h2 class="dark-h2">O que fizemos?</h2>
         <div class="we-done">
           <p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
@@ -111,7 +112,7 @@
       </section>
 
       <!-- 5 -->
-      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+      <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
         <h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
         <p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
 
@@ -122,7 +123,7 @@
       </section>
 
       <!-- 6 -->
-      <section class="et-page" data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+      <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
         <h2 class="dark-h2">Como lemos o resultado?</h2>
         <p class="subtitle">Separamos a pesquisa nos capítulos descritos abaixo. Eles agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
         <div class="chapters">
@@ -150,7 +151,7 @@
       </section>
 
       <!-- 7 -->
-      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <img src="img/icone-perfil.png">
         <h3>Perfil</h3>
         <p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil das pessoas que participam do financiamento coletivo no Brasil.</p>
@@ -161,7 +162,7 @@
       </section>
 
       <!-- 8 -->
-      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <h3>Onde você mora?</h3>
         <img src="img/perfil/imagem-perfil-7.png" alt="">
 
@@ -171,7 +172,7 @@
       </section>
 
       <!-- 9 -->
-      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <div id="gender">
           <header>
             <h3 id="gender-title"><img src="img/perfil/icon-genero.png">Gênero</h3>
@@ -196,7 +197,7 @@
       </section>
 
       <!-- 10 -->
-      <section class="et-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <div id="money">
           <h3 id="money-title"><img src="img/perfil/icon-cifra.png">Qual a sua renda mensal?</h3>
           <img id="money-image" src="img/perfil/grafico-renda.png">
@@ -210,7 +211,7 @@
       </section>
 
       <!-- 11 -->
-      <section class="et-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <h3>Qual a sua ocupação?</h3>
 
         <ul id="occupation">
@@ -254,7 +255,7 @@
       </section>
 
       <!-- 12 -->
-      <section class="et-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <div id="workarea">
           <div>
             <h3>Área de trabalho</h3>
@@ -334,7 +335,7 @@
       </section>
 
       <!-- 13 -->
-      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <div id="time">
           <h3 id="time-title"><img src="img/perfil/icon-calendar.png">Empreendedores, há quanto tempo abriram seus negócios?</h3>
           <ul id="time-data-list">
@@ -371,7 +372,7 @@
       </section>
 
       <!-- 14 -->
-      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <h3>Hábitos e condutas</h3>
         <img src="img/perfil/imagem-perfil-13.png" alt="">
 
@@ -381,7 +382,7 @@
       </section>
 
       <!-- 15 -->
-      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <div id="information">
           <p id="information-text">Sites e portais de notícias já ocupam lugar junto às redes sociais quando o assunto é fonte de notícia. De maneira geral, a opinião acaba sendo formada com um misto entre as notícias dos grandes agentes de mídia online e o conteúdo postado pelos usuários e conhecidos nas redes sociais.</p>
           <h3 id="information-title">Onde buscam informação?</h3>
@@ -394,7 +395,7 @@
       </section>
 
       <!-- 16 -->
-      <section class="et-page" class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <h3>Comentários</h3>
 
         <div id="disqus_thread"></div>
