--- a/home.html
+++ b/home.html
@@ -30,11 +30,10 @@
 
     <body>
     <div class="share">
-      <p>Compartilhe a pesquisa!</p>
       <ul>
         <li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
-        <li><a href="https://twitter.com/share" class="twitter-share-button" data-text="Confira a pesquisa Retrato do Financiamento Coletivo no Brasil! #rfcbr http://pesquisa.catarse.me by @catarse e Chorus.vc " data-lang="pt">Tweetar</a></li>
         <li><div class="g-plusone" data-size="medium"></div></li>
+        <li><a href="https://twitter.com/share" class="twitter-share-button" data-text="Confira a pesquisa Retrato do Financiamento Coletivo no Brasil! #rfcbr http://pesquisa.catarse.me by @catarse e Chorus.vc " data-lang="pt">Tweetar</a></li>
       </ul>
     </div>
     <div class="stamp"><a href="#/0">#rfcbr</a></div>
@@ -55,7 +54,7 @@
       </section>
 
       <!-- 2 -->
-      <section class="et-page" style="background-color: red">
+      <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
         <p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
         <p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
         <p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
@@ -151,7 +150,7 @@
       </section>
 
       <!-- 7 -->
-      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <img src="img/icone-perfil.png">
         <h3>Perfil</h3>
         <p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil das pessoas que participam do financiamento coletivo no Brasil.</p>
@@ -162,17 +161,21 @@
       </section>
 
       <!-- 8 -->
-      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <h3>Onde você mora?</h3>
-        <img src="img/perfil/imagem-perfil-7.png" alt="">
-
+      <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+        <div class="regions">
+	        <img class="regions-img" src="img/perfil/imagem-perfil-7.png" alt="">
+			<div class="regions-text">
+				<h3>Em que regiões do Brasil estamos?</h3>
+				<p>Pessoas que participam do Financiamento Coletivo já estão distribuídas por todos os Estados do Brasil e proporcionalmente a participação de cada região brasileira no financiamento coletivo parece bater com a distribuição populacional no país. Acreditamos que 2014 será o ano de espalharmos ainda mais essa ideia e alcançar mais gente no Nordeste, Norte e Centro-Oeste brasileiro.</p>
+			</div>
+		</div>
         <!-- navigation -->
         <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
         <a class="arrow-right et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">próximo</a>
       </section>
 
       <!-- 9 -->
-      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <div id="gender">
           <header>
             <h3 id="gender-title"><img src="img/perfil/icon-genero.png">Gênero</h3>
@@ -212,7 +215,7 @@
 
       <!-- 11 -->
       <section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <h3>Qual a sua ocupação?</h3>
+        <h3><img style="width: 25px; margin: 0px 5px 5px 0; vertical-align: middle;" src="img/perfil/icone-perfil-9.svg">Qual a sua ocupação?</h3>
 
         <ul id="occupation">
           <li>
@@ -335,7 +338,7 @@
       </section>
 
       <!-- 13 -->
-      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <div id="time">
           <h3 id="time-title"><img src="img/perfil/icon-calendar.png">Empreendedores, há quanto tempo abriram seus negócios?</h3>
           <ul id="time-data-list">
@@ -372,8 +375,8 @@
       </section>
 
       <!-- 14 -->
-      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <h3>Hábitos e condutas</h3>
+      <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+        <h3 class="habits">Hábitos e condutas</h3>
         <img src="img/perfil/imagem-perfil-13.png" alt="">
 
         <!-- navigation -->
@@ -382,9 +385,8 @@
       </section>
 
       <!-- 15 -->
-      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <div id="information">
-          <p id="information-text">Sites e portais de notícias já ocupam lugar junto às redes sociais quando o assunto é fonte de notícia. De maneira geral, a opinião acaba sendo formada com um misto entre as notícias dos grandes agentes de mídia online e o conteúdo postado pelos usuários e conhecidos nas redes sociais.</p>
           <h3 id="information-title">Onde buscam informação?</h3>
           <img src="img/perfil/grafico-informacoes.png">
         </div>
@@ -395,7 +397,7 @@
       </section>
 
       <!-- 16 -->
-      <section class="et-page" class="result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+      <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
         <h3>Comentários</h3>
 
         <div id="disqus_thread"></div>
