--- a/home.html
+++ b/home.html
@@ -40,14 +40,16 @@
     <div class="slides et-wrapper">
       <!-- 1 -->
       <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
-        <h1 class="presentation-frame">
-          retrato<br>
-          financiamento<br>
-          coletivo<br>
-          brasil<br>
-          <small>2013/2014</small>
-        </h1>
-        <img src="img/logos.png"></img>
+        <div class="v-center" style="margin-top: -190px">
+        	<h1 class="presentation-frame">
+	          retrato<br>
+	          financiamento<br>
+	          coletivo<br>
+	          brasil<br>
+	          <small>2013/2014</small>
+	        </h1>
+	        <img src="img/logos.png"></img>
+    	</div>
 
         <!-- navigation -->
         <a class="arrow-right first-arrow et-rotate" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">Começar</a>
@@ -55,10 +57,12 @@
 
       <!-- 2 -->
       <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
-        <p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
-        <p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
-        <p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
-        <img src="img/logos.png"></img>
+        <div class="v-center" style="margin-top: -276px">
+	        <p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
+	        <p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
+	        <p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
+	        <img src="img/logos.png"></img>
+	    </div>
 
         <!-- navigation -->
         <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
@@ -67,18 +71,20 @@
 
       <!-- 3 -->
       <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
-        <h2 class="dark-h2">O que queremos?</h2>
-        <div class="we-want">
-          <h3>Conhecer</h3>
-          <p>o perfil das pessoas que fazem o financiamento coletivo acontecer no Brasil</p>
-          <h3>Compreender</h3>
-          <p>os comportamentos, motivações e porquês das pessoas ao apoiarem um projeto</p>
-        </div>
-        <div class="we-want">
-          <h3>Analisar</h3>
-          <p>o cenário atual do financiamento coletivo no país</p>
-          <h3>Apresentar</h3>
-          <p>um pouco da ótica dos realizadores de projetos que já passaram pela plataforma do Catarse</p>
+        <div class="v-center" style="margin-top: -274px">
+	        <h2 class="dark-h2">O que queremos?</h2>
+	        <div class="we-want">
+	          <h3>Conhecer</h3>
+	          <p>o perfil das pessoas que fazem o financiamento coletivo acontecer no Brasil</p>
+	          <h3>Compreender</h3>
+	          <p>os comportamentos, motivações e porquês das pessoas ao apoiarem um projeto</p>
+	        </div>
+	        <div class="we-want">
+	          <h3>Analisar</h3>
+	          <p>o cenário atual do financiamento coletivo no país</p>
+	          <h3>Apresentar</h3>
+	          <p>um pouco da ótica dos realizadores de projetos que já passaram pela plataforma do Catarse</p>
+	        </div>
         </div>
 
         <!-- navigation -->
@@ -88,21 +94,23 @@
 
       <!-- 4 -->
       <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
-        <h2 class="dark-h2">O que fizemos?</h2>
-        <div class="we-done">
-          <p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
-          <p class="we-done-data">
-          <strong class="we-done-numbers">3336</strong>
-          pessoas responderam o questionário
-          </p>
-          <p class="we-done-data">
-          <strong class="we-done-numbers">1.7%</strong>
-          margem de erro dos dados estatísticos
-          </p>
-          <p class="we-done-data">
-          <strong class="we-done-duration">29/08 a 17/09/2013</strong>
-          período em que os questionários foram respondidos
-          </p>
+        <div class="v-center" style="margin-top: -237px">
+	        <h2 class="dark-h2">O que fizemos?</h2>
+	        <div class="we-done">
+	          <p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
+	          <p class="we-done-data">
+	          <strong class="we-done-numbers">3336</strong>
+	          pessoas responderam o questionário
+	          </p>
+	          <p class="we-done-data">
+	          <strong class="we-done-numbers">1.7%</strong>
+	          margem de erro dos dados estatísticos
+	          </p>
+	          <p class="we-done-data">
+	          <strong class="we-done-duration">29/08 a 17/09/2013</strong>
+	          período em que os questionários foram respondidos
+	          </p>
+	        </div>
         </div>
 
         <!-- navigation -->
@@ -112,36 +120,41 @@
 
       <!-- 5 -->
       <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
-        <h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
-        <p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
+        <div class="v-center" style="margin-top: -220px">
+	        <h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
+	        <p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
 
-        <!-- navigation -->
-        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
-        <a class="question-button et-rotate" onclick="_gaq.push(['_trackEvent', 'response', 'yes'])" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">sim</a>
-        <a class="question-button et-rotate" onclick="_gaq.push(['_trackEvent', 'response', 'no'])" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">não</a>
+	        <!-- navigation -->
+	        <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
+	        <a class="question-button et-rotate" onclick="_gaq.push(['_trackEvent', 'response', 'yes'])" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">sim</a>
+	        <a class="question-button et-rotate" onclick="_gaq.push(['_trackEvent', 'response', 'no'])" data-direction="next" et-in="rotateRoomLeftIn" et-out="rotateRoomLeftOut ontop">não</a>
+	    </div>
+
       </section>
 
       <!-- 6 -->
       <section class="et-page" style="background: radial-gradient(circle, #ffffff, #eeeeee)">
-        <h2 class="dark-h2">Como lemos o resultado?</h2>
-        <p class="subtitle">Separamos a pesquisa nos capítulos descritos abaixo. Eles agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
-        <div class="chapters">
-          <figure class="result-group">
-            <img src="img/perfil/imagem-perfil-4-perfil.png">
-            <figcaption class="perfil">Perfil</figcaption>
-          </figure>
-          <figure class="result-group">
-            <img src="img/perfil/imagem-perfil-4-financiamento.png">
-            <figcaption class="financiamento">Financiamento</figcaption>
-          </figure>
-          <figure class="result-group">
-            <img src="img/perfil/imagem-perfil-4-rede.png">
-            <figcaption class="rede">Rede</figcaption>
-          </figure>
-          <figure class="result-group last">
-            <img src="img/perfil/imagem-perfil-4-realiza.png">
-            <figcaption class="realizadores">Realizadores</figcaption>
-          </figure>
+        <div class="v-center" style="margin-top: -179px">
+	        <h2 class="dark-h2">Como lemos o resultado?</h2>
+	        <p class="subtitle">Separamos a pesquisa nos capítulos descritos abaixo. Eles agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
+	        <div class="chapters">
+	          <figure class="result-group">
+	            <img src="img/perfil/imagem-perfil-4-perfil.png">
+	            <figcaption class="perfil">Perfil</figcaption>
+	          </figure>
+	          <figure class="result-group">
+	            <img src="img/perfil/imagem-perfil-4-financiamento.png">
+	            <figcaption class="financiamento">Financiamento</figcaption>
+	          </figure>
+	          <figure class="result-group">
+	            <img src="img/perfil/imagem-perfil-4-rede.png">
+	            <figcaption class="rede">Rede</figcaption>
+	          </figure>
+	          <figure class="result-group last">
+	            <img src="img/perfil/imagem-perfil-4-realiza.png">
+	            <figcaption class="realizadores">Realizadores</figcaption>
+	          </figure>
+	        </div>
         </div>
 
         <!-- navigation -->
@@ -151,9 +164,11 @@
 
       <!-- 7 -->
       <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <img src="img/icone-perfil.png">
-        <h3>Perfil</h3>
-        <p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil das pessoas que participam do financiamento coletivo no Brasil.</p>
+        <div class="v-center" style="margin-top: -225px">
+	        <img src="img/icone-perfil.png">
+	        <h3>Perfil</h3>
+	        <p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil das pessoas que participam do financiamento coletivo no Brasil.</p>
+        </div>
 
         <!-- navigation -->
         <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
@@ -162,7 +177,7 @@
 
       <!-- 8 -->
       <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <div class="regions">
+        <div class="regions" style="margin-top: -0">
 	        <img class="regions-img" src="img/perfil/imagem-perfil-7.png" alt="">
 			<div class="regions-text">
 				<h3>Em que regiões do Brasil estamos?</h3>
@@ -176,22 +191,24 @@
 
       <!-- 9 -->
       <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <div id="gender">
-          <header>
-            <h3 id="gender-title"><img src="img/perfil/icon-genero.png">Gênero</h3>
+        <div class="v-center" style="margin-top: -228px">
+	        <div id="gender">
+	          <header>
+	            <h3 id="gender-title"><img src="img/perfil/icon-genero.png">Gênero</h3>
 
-            <p class="gender-data"><img src="img/perfil/icon-man.png">59%</p>
-            <p class="gender-data"><img src="img/perfil/icon-woman.png">41%</p>
-          </header>
-          <div class="gender-table">
-            <h4><img src="img/perfil/icon-escolaridade.png">Idade</h4>
-            <img class="gender-graph" src="img/perfil/grafico-idade.png">
-          </div>
-          <div class="gender-table">
-            <h4><img src="img/perfil/icon-idade.png">Escolaridade</h4>
-            <img class="gender-graph" src="img/perfil/grafico-escolaridade.png">
-          </div>
-        </div>
+	            <p class="gender-data"><img src="img/perfil/icon-man.png">59%</p>
+	            <p class="gender-data"><img src="img/perfil/icon-woman.png">41%</p>
+	          </header>
+	          <div class="gender-table">
+	            <h4><img src="img/perfil/icon-escolaridade.png">Idade</h4>
+	            <img class="gender-graph" src="img/perfil/grafico-idade.png">
+	          </div>
+	          <div class="gender-table">
+	            <h4><img src="img/perfil/icon-idade.png">Escolaridade</h4>
+	            <img class="gender-graph" src="img/perfil/grafico-escolaridade.png">
+	          </div>
+	        </div>
+	    </div>
 
 
         <!-- navigation -->
@@ -201,11 +218,13 @@
 
       <!-- 10 -->
       <section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <div id="money">
-          <h3 id="money-title"><img src="img/perfil/icon-cifra.png">Qual a sua renda mensal?</h3>
-          <img id="money-image" src="img/perfil/grafico-renda.png">
+        <div class="v-center" style="margin-top: -257px">
+	        <div id="money">
+	          <h3 id="money-title"><img src="img/perfil/icon-cifra.png">Qual a sua renda mensal?</h3>
+	          <img id="money-image" src="img/perfil/grafico-renda.png">
 
-          <p id="money-text"><strong>64%</strong>das pessoas que fazem o financiamento coletivo acontecer no Brasil ganham até R$6.000 por mês</p>
+	          <p id="money-text"><strong>64%</strong>das pessoas que fazem o financiamento coletivo acontecer no Brasil ganham até R$6.000 por mês</p>
+	        </div>
         </div>
 
         <!-- navigation -->
@@ -215,42 +234,44 @@
 
       <!-- 11 -->
       <section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <h3><img style="width: 25px; margin: 0px 5px 5px 0; vertical-align: middle;" src="img/perfil/icone-perfil-9.svg">Qual a sua ocupação?</h3>
+        <div class="v-center" style="margin-top: -269px">
+	        <h3><img style="width: 25px; margin: 0px 5px 5px 0; vertical-align: middle;" src="img/perfil/icone-perfil-9.svg">Qual a sua ocupação?</h3>
 
-        <ul id="occupation">
-          <li>
-          <p class="item-1">Funcionário de empresa privada</p>
-          <p>26%</p>
-          </li>
-          <li>
-          <p class="item-2">Servidor público</p>
-          <p>18%</p>
-          </li>
-          <li>
-          <p class="item-3">Empreendedor / dono de empresa</p>
-          <p>14%</p>
-          </li>
-          <li>
-          <p class="item-4">Freela / autônomo</p>
-          <p>14%</p>
-          </li>
-          <li>
-          <p class="item-5">Estudante</p>
-          <p>13%</p>
-          </li>
-          <li>
-          <p class="item-6">3° setor</p>
-          <p>4%</p>
-          </li>
-          <li>
-          <p class="item-7">Sem trabalho</p>
-          <p>4%</p>
-          </li>
-          <li>
-          <p class="item-8">Outros</p>
-          <p>6%</p>
-          </li>
-        </ul>
+	        <ul id="occupation">
+	          <li>
+	          <p class="item-1">Funcionário de empresa privada</p>
+	          <p>26%</p>
+	          </li>
+	          <li>
+	          <p class="item-2">Servidor público</p>
+	          <p>18%</p>
+	          </li>
+	          <li>
+	          <p class="item-3">Empreendedor / dono de empresa</p>
+	          <p>14%</p>
+	          </li>
+	          <li>
+	          <p class="item-4">Freela / autônomo</p>
+	          <p>14%</p>
+	          </li>
+	          <li>
+	          <p class="item-5">Estudante</p>
+	          <p>13%</p>
+	          </li>
+	          <li>
+	          <p class="item-6">3° setor</p>
+	          <p>4%</p>
+	          </li>
+	          <li>
+	          <p class="item-7">Sem trabalho</p>
+	          <p>4%</p>
+	          </li>
+	          <li>
+	          <p class="item-8">Outros</p>
+	          <p>6%</p>
+	          </li>
+	        </ul>
+        </div>
 
         <!-- navigation -->
         <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
@@ -259,7 +280,7 @@
 
       <!-- 12 -->
       <section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <div id="workarea">
+        <div id="workarea" class="v-center" style="margin-top: -180px">
           <div>
             <h3>Área de trabalho</h3>
             <p>Ao lado você confere quais são as áreas profissionais de pessoas que participam de alguma forma do financiamento coletivo. Se a letrinha da sua área ficou pequena demais para ler ou nem está listada, está na hora de agitar a sua rede para criar, apoiar ou divulgar um projeto no Catarse.</p>
@@ -339,7 +360,7 @@
 
       <!-- 13 -->
       <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <div id="time">
+        <div id="time" class="v-center" style="margin-top: -227px">
           <h3 id="time-title"><img src="img/perfil/icon-calendar.png">Empreendedores, há quanto tempo abriram seus negócios?</h3>
           <ul id="time-data-list">
             <li id="time-data-01">
@@ -376,8 +397,10 @@
 
       <!-- 14 -->
       <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <h3 class="habits">Hábitos e condutas</h3>
-        <img src="img/perfil/imagem-perfil-13.png" alt="">
+        <div class="v-center" style="margin-top: -267px">
+	        <h3 class="habits">Hábitos e condutas</h3>
+	        <img src="img/perfil/imagem-perfil-13.png" alt="">
+        </div>
 
         <!-- navigation -->
         <a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
@@ -386,7 +409,7 @@
 
       <!-- 15 -->
       <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <div id="information">
+        <div id="information" class="v-center" style="margin-top: -159px">
           <h3 id="information-title">Onde buscam informação?</h3>
           <img src="img/perfil/grafico-informacoes.png">
         </div>
@@ -398,9 +421,10 @@
 
       <!-- 16 -->
       <section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
-        <h3>Comentários</h3>
-
-        <div id="disqus_thread"></div>
+        <div class="v-center" style="margin-top: -264px">
+        	<h3>Comentários</h3>
+			<div id="disqus_thread"></div>
+		</div>
         <!-- navigation -->
         <a class="arrow-left" href="#/15">anterior</a>
       </section>
